fix: optimize high contrast mode

--- a/src/components/dialog/dialog/dialog.scss
+++ b/src/components/dialog/dialog/dialog.scss
@@ -72,6 +72,10 @@
   --sbb-dialog-color: var(--sbb-color-white);
   --sbb-dialog-background-color: var(--sbb-color-midnight);
   --sbb-dialog-actions-border: none;
+
+  @include sbb.if-forced-colors {
+    --sbb-dialog-actions-border: var(--sbb-border-width-1x) solid Highlight;
+  }
 }
 
 :host([disable-animation]) {
@@ -80,6 +84,10 @@
 
 :host([data-overflows]:not([negative])) {
   --sbb-dialog-actions-border: none;
+
+  @include sbb.if-forced-colors {
+    --sbb-dialog-actions-border: var(--sbb-border-width-1x) solid Highlight;
+  }
 }
 
 :host(:not([data-state='closed'])) {
